syntax = "proto3";

package telemetry;

option go_package = "github.com/Ricky004/watchdata/proto/telemetry";

import "google/protobuf/timestamp.proto";


message KeyValue {
  string key = 1;
  string value = 2;
}


message Resource {
  repeated KeyValue attributes = 1;
}


message LogRecord {
  google.protobuf.Timestamp timestamp = 1; 
  google.protobuf.Timestamp observed_time = 2;

  int32 severity_number = 3;
  string severity_text = 4;

  string body = 5;

  repeated KeyValue attributes = 6;

  Resource resource = 7;

  string trace_id = 8;
  string span_id = 9;

  uint32 trace_flags = 10;
  uint32 flags = 11;

  int32 dropped_attributes_count = 12;
}
